--- a/src/index.css
+++ b/src/index.css
@@ -1,36 +1,52 @@
+html {
+  height: 100vh;
+  background: linear-gradient(180deg, #000000, #060143); }
+
 body {
   margin: 0;
-  font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+  -moz-osx-font-smoothing: grayscale; }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace; }
 
 * {
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
 
 button {
   font-size: 16px;
   border: none;
-  background: none;
   border-radius: 2rem;
   padding: 1rem 2rem;
+  background-color: #7C89FF;
+  color: white;
   text-transform: uppercase;
   transition: transform 0.2s, box-shadow 0.2s;
-}
+  display: flex;
+  justify-content: center; }
 
 button:hover {
   transform: translateY(-5px);
-  box-shadow: 0 5px 5px rgba(50, 50, 50, 0.3);
-}
+  box-shadow: 0 5px 5px rgba(50, 50, 50, 0.3); }
 
-:root {
-  --spotify-green: #1db954;
-}
+.login-hero {
+  width: 100%;
+  max-height: 230px;
+  object-fit: cover; }
+
+.login-hero-overlay {
+  position: absolute;
+  width: 100%;
+  height: 50px;
+  top: 180px;
+  z-index: 1;
+  background: linear-gradient(180deg, rgba(1, 1, 27, 0.1), #01011B); }
+
+.login-body {
+  color: white; }
+
+.spotify-btn {
+  background-color: #1db954; }
+
+/*# sourceMappingURL=index.css.map */
