--- a/src/index.css
+++ b/src/index.css
@@ -44,9 +44,22 @@ button:hover {
   background: linear-gradient(180deg, rgba(1, 1, 27, 0.1), #01011B); }
 
 .login-body {
-  color: white; }
+  color: white;
+  text-align: center; }
+
+.disclaimer {
+  opacity: 0.8;
+  font-weight: lighter;
+  max-width: 80%; }
+  @media (min-width: 992px) {
+    .disclaimer {
+      width: 300px; } }
 
 .spotify-btn {
   background-color: #1db954; }
+
+.center {
+  margin-right: auto;
+  margin-left: auto; }
 
 /*# sourceMappingURL=index.css.map */
