--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,41 @@
 $primary: #7C89FF;
 $spotify-green: #1db954;
+// Small tablets and large smartphones (landscape view)
+$screen-sm-min: 576px;
+// Small tablets (portrait view)
+$screen-md-min: 768px;
+// Tablets and small desktops
+$screen-lg-min: 992px;
+// Large tablets and desktops
+$screen-xl-min: 1200px;
+
+// Small devices
+@mixin sm {
+  @media (min-width: #{$screen-sm-min}) {
+    @content;
+  }
+}
+
+// Medium devices
+@mixin md {
+  @media (min-width: #{$screen-md-min}) {
+    @content;
+  }
+}
+
+// Large devices
+@mixin lg {
+  @media (min-width: #{$screen-lg-min}) {
+    @content;
+  }
+}
+
+// Extra large devices
+@mixin xl {
+  @media (min-width: #{$screen-xl-min}) {
+    @content;
+  }
+}
 
 html {
   height: 100vh;
@@ -42,6 +78,8 @@ button:hover {
   box-shadow: 0 5px 5px rgba(50, 50, 50, 0.3);
 }
 
+//Login
+
 .login-hero {
   width: 100%;
   max-height: 230px;
@@ -58,9 +96,25 @@ button:hover {
 }
 
 .login-body {
-  color: white,
+  color: white;
+  text-align: center;
+}
+
+.disclaimer {
+  opacity: 0.8;
+  font-weight: lighter;
+  max-width: 80%;
+  @include lg {
+    width: 300px;
+  }
 }
 
 .spotify-btn {
   background-color: $spotify-green;
+}
+
+//Utility
+.center {
+  margin-right: auto;
+  margin-left: auto;
 }
