--- a/src/index.css
+++ b/src/index.css
@@ -49,14 +49,28 @@ button:hover {
 
 .disclaimer {
   opacity: 0.8;
+  font-size: 0.8rem;
   font-weight: lighter;
   max-width: 80%; }
-  @media (min-width: 992px) {
+  @media (min-width: 768px) {
     .disclaimer {
-      width: 300px; } }
+      width: 250px; } }
 
 .spotify-btn {
   background-color: #1db954; }
+
+#account {
+  width: calc(100% - 20px);
+  margin-top: 10vh;
+  background-color: white;
+  border-radius: 10px;
+  padding: 6px 12px; }
+  @media (min-width: 768px) {
+    #account {
+      width: 580px; } }
+
+.floating-input {
+  font-weight: 900; }
 
 .center {
   margin-right: auto;
