--- a/src/dashboard/styles.scss
+++ b/src/dashboard/styles.scss
@@ -1,6 +1,30 @@
 .dashboard-page {
   padding: 0 15px;
 
+  nav {
+    margin: 30px 0;
+    display: flex;
+    align-items: center;
+
+    button {
+      padding: 0;
+      color: white;
+    }
+
+    input {
+      flex: 1;
+      background: none;
+      border: none;
+      color: white;
+      font-size: 36px;
+      font-weight: bold;
+    }
+
+    .profile-button {
+      margin-right: 15px;
+    }
+  }
+
   section.card {
     max-width: 500px;
     margin: auto;
