--- a/src/index.scss
+++ b/src/index.scss
@@ -156,8 +156,9 @@ button:hover {
 #room {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   width: 100vw;
-  height: 100%;
+  height: 100vh;
 }
 
 #party {
@@ -167,9 +168,18 @@ button:hover {
   background: linear-gradient(0deg,rgba(255,0,150,0.3),rgba(255,0,150,0.3)), url("./resources/img/dj-animations/background.gif");
   background-size: cover;
   background-position: center center;
-  @include lg {
+  @include md {
     min-height: 300px;
   }
+}
+
+.party-dj-name {
+  color: white;
+  font-size: 20px;
+  font-weight: 600;
+  margin-left: -12px;
+  padding: 6px;
+  background-color: rgba(black, 0.5);
 }
 
 .party-dj-wrapper {
@@ -187,7 +197,22 @@ button:hover {
 
 .party-dj {
   margin-left: -20px;
+  margin-top: -20px;
   height: 110px;
+}
+
+#room-controls {
+  display: flex;
+  flex: 0;
+  background-color: white;
+  padding: 6px 12px 16px 12px;
+  width: 100%;
+  @include md {
+    border-radius: $border-radius;
+    border: solid 3px $neutral-light;
+    width: 580px;
+    margin-bottom: 30px;
+  }
 }
 
 //Utility
