--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,9 @@ button:hover {
   background: white;
   border-radius: 10px; }
 
+hr {
+  border-top: solid 1px #e5e5e5; }
+
 .login-hero {
   width: 100%;
   max-height: 230px;
@@ -96,11 +99,13 @@ button:hover {
 
 #party {
   width: inherit;
+  max-height: 1000px;
   display: flex;
   flex: 1;
   background: linear-gradient(0deg, rgba(255, 0, 150, 0.3), rgba(255, 0, 150, 0.3)), url("./resources/img/dj-animations/background.gif");
   background-size: cover;
-  background-position: center center; }
+  background-position: center center;
+  margin-bottom: -20px; }
   @media (min-width: 768px) {
     #party {
       min-height: 300px; } }
@@ -109,7 +114,7 @@ button:hover {
   color: white;
   font-size: 20px;
   font-weight: 600;
-  margin-left: -12px;
+  margin-left: -42px;
   padding: 6px;
   background-color: rgba(0, 0, 0, 0.5); }
 
@@ -121,22 +126,22 @@ button:hover {
 
 .party-booth {
   width: 600px;
-  height: 600px;
-  margin-top: -250px;
+  margin-top: -505px;
   z-index: 1; }
 
 .party-dj {
-  margin-left: -20px;
+  margin-left: -50px;
   margin-top: -20px;
-  height: 220px;
-  width: 220px }
+  height: 220px; }
 
 #room-controls {
   display: flex;
+  flex-direction: column;
   flex: 0;
   background-color: white;
   padding: 6px 12px 16px 12px;
-  width: 100%; }
+  width: 100%;
+  z-index: 2; }
   @media (min-width: 768px) {
     #room-controls {
       border-radius: 10px;
@@ -151,9 +156,13 @@ button:hover {
   flex-direction: row; }
 
 .song-album-cover {
-  height: 120px;
-  width: 120px;
+  height: 90px;
+  width: 90px;
   margin-right: 12px; }
+  @media (min-width: 768px) {
+    .song-album-cover {
+      height: 120px;
+      width: 120px; } }
 
 .song-content {
   display: flex;
@@ -180,6 +189,14 @@ button:hover {
     padding: 0;
     color: #cecece;
     background: transparent; }
+
+.judge-row {
+  margin-top: 12px;
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: row; }
+  .judge-row .negative {
+    background-color: red; }
 
 .color-neutral {
   color: #cecece; }
