--- a/src/index.scss
+++ b/src/index.scss
@@ -84,6 +84,10 @@ button:hover {
   border-radius: 10px;
 }
 
+hr {
+  border-top: solid 1px $neutral-light;
+}
+
 //Login
 
 .login-hero {
@@ -169,6 +173,7 @@ button:hover {
   background: linear-gradient(0deg,rgba(255,0,150,0.3),rgba(255,0,150,0.3)), url("./resources/img/dj-animations/background.gif");
   background-size: cover;
   background-position: center center;
+  margin-bottom: -20px;
   @include md {
     min-height: 300px;
   }
@@ -202,18 +207,14 @@ button:hover {
   height: 220px;
 }
 
-.party-floor {
-  width: 100vw;
-  height: 10vw;
-  margin-top: -20px;
-}
-
 #room-controls {
   display: flex;
+  flex-direction: column;
   flex: 0;
   background-color: white;
   padding: 6px 12px 16px 12px;
   width: 100%;
+  z-index: 2;
   @include md {
     border-radius: $border-radius;
     border: solid 3px $neutral-light;
@@ -230,9 +231,13 @@ button:hover {
 }
 
 .song-album-cover {
-  height: 120px;
-  width: 120px;
+  height: 90px;
+  width: 90px;
   margin-right: 12px;
+  @include md {
+    height: 120px;
+    width: 120px;
+  }
 }
 
 .song-content {
@@ -265,6 +270,16 @@ button:hover {
     padding: 0;
     color: $neutral;
     background: transparent;
+  }
+}
+
+.judge-row {
+  margin-top: 12px;
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: row;
+  .negative {
+    background-color: red;
   }
 }
 
