--- a/src/index.scss
+++ b/src/index.scss
@@ -65,6 +65,7 @@ code {
   box-sizing: border-box;
 }
 
+a,
 button {
   font-size: 16px;
   border: none;
@@ -76,6 +77,7 @@ button {
   transition: transform 0.2s, box-shadow 0.2s;
   display: flex;
   justify-content: center;
+  text-decoration: none;
 }
 
 button:hover {
