--- a/src/index.css
+++ b/src/index.css
@@ -198,6 +198,16 @@ hr {
   .judge-row .negative {
     background-color: red; }
 
+.queue-container {
+  height: 230px;
+  overflow-y: scroll;
+  padding: 12px; }
+
+.queue-cell {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row; }
+
 .color-neutral {
   color: #cecece; }
 
