--- a/src/index.scss
+++ b/src/index.scss
@@ -283,6 +283,18 @@ hr {
   }
 }
 
+.queue-container {
+  height: 230px;
+  overflow-y: scroll;
+  padding: 12px;
+}
+
+.queue-cell {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+}
+
 //Utility
 .color-neutral {
   color: $neutral;
