fix back button

--- a/src/genre/styles.scss
+++ b/src/genre/styles.scss
@@ -1,14 +1,28 @@
 .genre-page {
   padding: 10px;
-  padding-top: 75px;
+  padding-top: 100px;
 
-  .back-button {
+  nav {
     position: fixed;
-    top: 15px;
-    left: 15px;
-    background: #333;
-    padding: 5px;
-    border-radius: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 75px;
     z-index: 1;
+
+    div {
+      background: linear-gradient(#000, rgba(0, 0, 0, 0));
+      height: 100%;
+      margin: auto;
+      max-width: 750px;
+      padding-top: 30px;
+    }
+
+    .back-button {
+      display: inline-block;
+      background: none;
+      padding: 5px;
+      border-radius: 100%;
+    }
   }
 }
