--- a/src/dashboard/styles.css
+++ b/src/dashboard/styles.css
@@ -5,6 +5,7 @@
     max-width: 800px;
     display: flex;
     align-items: center; }
+    .dashboard-page nav a,
     .dashboard-page nav button {
       padding: 0;
       background: none;
@@ -21,55 +22,5 @@
         width: 100%; }
       .dashboard-page nav .genre-search-container label {
         font-weight: bold; }
-  .dashboard-page section.card {
-    max-width: 500px;
-    margin: auto;
-    margin-bottom: 30px;
-    padding-bottom: 30px; }
-    .dashboard-page section.card .backing {
-      background-size: cover;
-      width: 100%;
-      height: 200px;
-      display: flex;
-      align-items: flex-end;
-      position: relative;
-      border-top-left-radius: inherit;
-      border-top-right-radius: inherit;
-      border: 5px solid white; }
-      .dashboard-page section.card .backing h2 {
-        color: white;
-        z-index: 1;
-        margin: 15px;
-        font-size: 36px; }
-    .dashboard-page section.card .backing::before {
-      content: '';
-      z-index: 0;
-      position: absolute;
-      height: 75px;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background: linear-gradient(180deg, rgba(0, 0, 0, 0), #000); }
-    .dashboard-page section.card .song {
-      padding: 10px;
-      display: flex;
-      align-items: center; }
-      .dashboard-page section.card .song h3,
-      .dashboard-page section.card .song p {
-        margin: 0; }
-      .dashboard-page section.card .song h3 {
-        margin-bottom: 5px; }
-      .dashboard-page section.card .song p {
-        margin-bottom: 15px; }
-      .dashboard-page section.card .song img {
-        margin-right: 10px; }
-      .dashboard-page section.card .song .text {
-        flex: 1; }
-      .dashboard-page section.card .song small,
-      .dashboard-page section.card .song .arrow-icon {
-        color: #999; }
-    .dashboard-page section.card > img {
-      width: 100%;
-      border: 5px solid white; }
 
 /*# sourceMappingURL=styles.css.map */
