--- a/src/index.css
+++ b/src/index.css
@@ -40,6 +40,9 @@ button:hover {
 hr {
   border-top: solid 1px #e5e5e5; }
 
+.logo {
+  width: 250px; }
+
 .login-hero {
   width: 100%;
   max-height: 230px;
