--- a/src/index.scss
+++ b/src/index.scss
@@ -174,6 +174,12 @@ hr {
   height: 100vh;
 }
 
+.float-button {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+}
+
 #party {
   width: inherit;
   display: flex;
@@ -189,6 +195,7 @@ hr {
   margin-bottom: -20px;
   @include md {
     min-height: 200px;
+    max-height: 600px;
   }
 }
 
@@ -234,7 +241,7 @@ hr {
 #room-controls {
   display: flex;
   flex-direction: column;
-  flex: 0;
+  flex: 1;
   background-color: white;
   padding: 6px 12px 16px 12px;
   width: 100%;
