--- a/src/index.css
+++ b/src/index.css
@@ -105,10 +105,13 @@ hr {
   width: 100vw;
   height: 100vh; }
 
-.float-button {
+.float-btn {
   position: absolute;
   top: 20px;
   left: 20px; }
+
+.link-btn {
+  padding: 0; }
 
 #party {
   width: inherit;
