--- a/src/index.scss
+++ b/src/index.scss
@@ -174,10 +174,14 @@ hr {
   height: 100vh;
 }
 
-.float-button {
+.float-btn {
   position: absolute;
   top: 20px;
   left: 20px;
+}
+
+.link-btn {
+  padding: 0;
 }
 
 #party {
