--- a/src/index.css
+++ b/src/index.css
@@ -231,7 +231,7 @@ hr {
     background-color: red; }
 
 .queue-container {
-  height: 230px;
+  max-height: 230px;
   overflow-y: scroll;
   padding: 12px; }
 
