--- a/src/index.css
+++ b/src/index.css
@@ -128,7 +128,7 @@ hr {
   margin-bottom: -20px; }
   @media (min-width: 768px) {
     #party {
-      min-height: 200px;
+      min-height: 100px;
       max-height: 600px; } }
 
 .party-dj-name {
@@ -167,6 +167,7 @@ hr {
       height: 210px; } }
 
 #room-controls {
+  overflow-y: scroll;
   display: flex;
   flex-direction: column;
   flex: 1;
@@ -256,7 +257,8 @@ hr {
   width: 100%;
   padding: 6px 0;
   border-top: solid 1px #e5e5e5;
-  cursor: pointer; }
+  cursor: pointer;
+  font-size: 1.5rem; }
   .search-result:hover {
     background-color: #e5e5e5; }
 
