--- a/src/index.scss
+++ b/src/index.scss
@@ -203,7 +203,7 @@ hr {
   background-position: center center;
   margin-bottom: -20px;
   @include md {
-    min-height: 200px;
+    min-height: 100px;
     max-height: 600px;
   }
 }
@@ -248,6 +248,7 @@ hr {
 }
 
 #room-controls {
+  overflow-y: scroll;
   display: flex;
   flex-direction: column;
   flex: 1;
@@ -354,6 +355,7 @@ hr {
   padding: 6px 0;
   border-top: solid 1px $neutral-light;
   cursor: pointer;
+  font-size: 1.5rem;
   &:hover {
     background-color: $neutral-light;
   }
